--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Set Variables
         run: |
-          IMAGE_NAME=""
-          DOCKERHUB_USERNAME=""
+          IMAGE_NAME="policing-and-income"
+          DOCKERHUB_USERNAME="ucsdleonkuo"
           echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV
           echo "DOCKERHUB_USERNAME=${DOCKERHUB_USERNAME}" >> $GITHUB_ENV
       - name: Build Image
