--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Set Variables
         run: |
-          IMAGE_NAME="policing-and-income"
+          IMAGE_NAME="ucsdleonkuo/policing-and-income"
           DOCKERHUB_USERNAME="ucsdleonkuo"
           echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV
           echo "DOCKERHUB_USERNAME=${DOCKERHUB_USERNAME}" >> $GITHUB_ENV
